--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #f46b45;
-$secondary-color: #eea849;
+$primary-color: #2196f3;
+$secondary-color: #f44336;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
