--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #2b5876;
-$secondary-color: #4e4376;
+$primary-color: #373B44;
+$secondary-color: #4286f4;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
